terraform/jenkins/jenkins_instance.tf
resource "aws_instance" "jenkins_instance" {
  ami                    = var.ubuntu_ami_id
  instance_type          = "t3.small"
  subnet_id              = aws_route_table_association.devops_experts_jenkins_priv_sub.subnet_id # Making sure NAT GW is available before creating the instance
  vpc_security_group_ids = [aws_security_group.jenkins_sg.id]

  iam_instance_profile = aws_iam_instance_profile.jenkins_profile.name

  # Enforce IMDSv2 token for metadata security
  metadata_options {
    http_endpoint = "enabled"
    http_tokens   = "required"
  }

  user_data = templatefile("${path.module}/scripts/ec2_provision.sh", {})

  tags = {
    Name = "devops-experts-jenkins"
  }
}

resource "aws_lb_target_group_attachment" "jenkins_attach" {
  target_group_arn = aws_lb_target_group.jenkins_tg.arn
  target_id        = aws_instance.jenkins_instance.id
  port             = 8080
}
